<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sound Jukebox</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--  SOUND EFFECTS -->
    <string name="bell_clang">Bell Clang</string>
    <string name="funky_gong">Funky Gong</string>
    <string name="random_ha">Random Ha</string>
    <string name="spooky_cry">Spooky Cry</string>
    <string name="drum_solo">Drum Solo</string>

</resources>
